/*
 * $Id: ChangeLog,v 1.5096 2006/07/28 01:56:25 bdj Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-07-29 11:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib/gtwvw/gtwvw.c
    + include "hbole.h"

2006-07-28 09:00 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * ChangeLog
    ! Fix wrong filename in Ron's last entry.
    ! Fix typo in my last entry.

2006-07-27 17:56 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * contrib/gtwvw/gtwvw.c
    * Missing type casts

2006-07-27 18:45 UTC+0100 Marek Paliwoda (mpaliwoda at interia pl)
   * xharbour/makallbc.bat
     * Restored previously ommited file

2006-07-27 18:45 UTC+0100 Marek Paliwoda (mpaliwoda at interia pl)
   * xharbour/bin/bld.bat
   * xharbour/makefile.bc
   * xharbour/makefile.bc
   * xharbour/makefile.vc
   * xharbour/dll_b32.bat
   * xharbour/dll_vc.bat
   * xharbour/hrbdll.bc
   * xharbour/hrbdll.vc
   * xharbour/make_b16.bat
   * xharbour/make_b32.bat
   * xharbour/make_vc.bat
   * xharbour/makefile.bc
   * xharbour/makefile.vc
   * xharbour/common.mak
     * Reverted makefile system to the old one

2006-07-27 11:46 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * bin\bld.bat
    * Removed sixcdx.lib from MSVC libs

  * source/rdd/nulsys/nulsys.c
    + Added missing hb_rddGetAliasNumber()

2006-07-27 09:30 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * include/hbset.h
    include/hbtrace.h
    ! exported some symbols for dll
  * source/common/hbtrace.c
    source/rtl/set.c
    ! export some symbols for dll

2006-07-26 22:50 UTC+0100 Marek Paliwoda (mpaliwoda at interia pl)
   * harbour/makefile.bc
     * Changed the behavior of CLEAN rule to not delete all libs from lib dir

2006-07-26 10:30 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * source/rtl/gtalleg/gtalleg.c